--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "pinia-plugin-persistedstate": "^4.4.1",
     "vue": "^3.5.17",
     "vue-i18n": "^11.1.11",
-    "vue-router": "^4.5.1",
-    "vue3-toastify": "^0.2.8"
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@types/markdown-it": "^14.1.2",
