--- a/package.json
+++ b/package.json
@@ -16,11 +16,9 @@
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.4.1",
     "qs": "^6.14.0",
-    "vee-validate": "^4.15.1",
     "vue": "^3.5.17",
     "vue-i18n": "^11.1.11",
-    "vue-router": "^4.5.1",
-    "yup": "^1.7.1"
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@types/markdown-it": "^14.1.2",
