feat/rework: updated path src main whit @/ and rework imports review of components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,9 @@
     "node_modules"
   ],
   "compilerOptions": {
+     "paths": {
+      "@/*": ["./src/*"]
+    },
     "strict": true,
     "isolatedModules": true,
     "moduleResolution": "node",
